262578989263/Games/templates/httproute-games-app-test-ecr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games-app-test-ecr
  namespace: gamestest
  labels:
    struct8.io/origin: games
    app.kubernetes.io/name: games-app-test-ecr
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infra
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app-test-ecr-svc
          namespace: gamestest
          port: 80
  hostnames:
    - games.k8h.admin.billingpay.com.br
